Proof reading page 9

--- a/formatAndDefs_FR.tex
+++ b/formatAndDefs_FR.tex
@@ -139,31 +139,31 @@ urlcolor=linkcol %couleur des liens pour les url
 %%% Fancy Header %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Fancy Header Style Options
 
-\pagestyle{fancy}                       % Sets fancy header and footer
-\fancyfoot{}                            % Delete current footer settings
-
-%\renewcommand{\chaptermark}[1]{         % Lower Case Chapter marker style
-%  \markboth{\chaptername\ \thechapter.\ #1}}{}} %
-
-%\renewcommand{\sectionmark}[1]{         % Lower case Section marker style
-%  \markright{\thesection.\ #1}}         %
-
-\fancyhead[LE,RO]{\bfseries\thepage}    % Page number (boldface) in left on even
-% pages and right on odd pages
-\fancyhead[RE]{\bfseries\nouppercase{\leftmark}}      % Chapter in the right on even pages
-\fancyhead[LO]{\bfseries\nouppercase{\rightmark}}     % Section in the left on odd pages
-
-\let\headruleORIG\headrule
-\renewcommand{\headrule}{\color{black} \headruleORIG}
-\renewcommand{\headrulewidth}{1.0pt}
-\usepackage{colortbl}
-\arrayrulecolor{black}
-
-\fancypagestyle{plain}{
-  \fancyhead{}
-  \fancyfoot{}
-  \renewcommand{\headrulewidth}{0pt}
-}
+%\pagestyle{fancy}                       % Sets fancy header and footer
+%\fancyfoot{}                            % Delete current footer settings
+%
+%%\renewcommand{\chaptermark}[1]{         % Lower Case Chapter marker style
+%%  \markboth{\chaptername\ \thechapter.\ #1}}{}} %
+%
+%%\renewcommand{\sectionmark}[1]{         % Lower case Section marker style
+%%  \markright{\thesection.\ #1}}         %
+%
+%%\fancyhead[LE,RO]{\bfseries\thepage}    % Page number (boldface) in left on even
+%% pages and right on odd pages
+%\fancyhead[RE]{\bfseries\nouppercase{\leftmark}}      % Chapter in the right on even pages
+%\fancyhead[LO]{\bfseries\nouppercase{\rightmark}}     % Section in the left on odd pages
+%\cfoot{\thepage}
+%\let\headruleORIG\headrule
+%\renewcommand{\headrule}{\color{black} \headruleORIG}
+%\renewcommand{\headrulewidth}{1.0pt}
+%\usepackage{colortbl}
+%\arrayrulecolor{black}
+%
+%\fancypagestyle{plain}{
+%  \fancyhead{}
+%  \fancyfoot{}
+%  \renewcommand{\headrulewidth}{0pt}
+%}
 
 %\usepackage{algorithm}
 %\usepackage[noend]{algorithmic}
