JAP french resume

--- a/formatAndDefs_FR.tex
+++ b/formatAndDefs_FR.tex
@@ -5,7 +5,7 @@
 %\usepackage{lmodern}
 %\usepackage[T1]{fontenc}
 \usepackage[french]{babel}
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 %\usepackage[babel=true]{microtype}
 \usepackage[sc,osf]{mathpazo}   % With old-style figures and real smallcaps.
